<resources>
    <string name="app_name">ChatVerse</string>
    <string name="ChatVerse">ChatVerse</string>
    <string name="subject">Your World\nYour ChatVerse</string>
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="Login">Login</string>
    <string name="welcome_to_chatverse">Welcome to ChatVerse !</string>
    <string name="username_email">Username / Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account_signup">Don\'t have an account? Signup</string>
    <string name="create_account">Create Account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="select_photo">Select photo</string>
</resources>